Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41155

QWinJumpList category "tasks" doesn't show up

    XMLWordPrintable

Details

    • 3d24906394049f34e471f300a87396255b523245 (5.4, 2.10.3014, 5.4)

    Description

      The QWinJumpListCategory "tasks" (QWinJumpList::tasks()) doesn't show up.
      The "recent" catgory seems to work fine.
      Not sure about the "frequent" category but I don't know what's the difference between "recent" and "frequent" anyway.

      Steps to reproduce
      Compile and run manual test "jumplist" (5.3/Src/qtwinextras/tests/manual/jumplist)

      Attachments

        1. 2014-09-04 19_10_41-.png
          115 kB
          Jochen Ulrich
        2. qtbug41155_diag.diff
          25 kB
          Friedemann Kleint
        3. qtbug41155_player_diag.diff
          3 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-41155
        # Subject Branch Project Status CR V

        Activity

          People

            Unassigned Unassigned
            ignitor Jochen Ulrich
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes