Remove setting of the default identifier from QWinJumpList.

QWinJumpList does not work with a default-generated ID, this is
only useful when the ID is properly registered.

Task-number: QTBUG-41155
Change-Id: Ic0e0238fa3337d79ac7bc3d1efb314e1533355f2
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>